--- a/roles/installer/tasks/15_clean_router_vm.yml
+++ b/roles/installer/tasks/15_clean_router_vm.yml
@@ -12,30 +12,30 @@
   register: running_vms
   become: yes
 
-- name: Destroy old bootstrap VMs, if any
+- name: Destroy old router VMs, if any
   virt:
     name: "{{ item }}"
     command: destroy
   with_items: "{{ running_vms.list_vms }}"
-  when: item is search("bootstrap-{{ cluster }}")
+  when: item is search("router-{{ cluster }}")
   become: yes
 
-- name: Undefine old bootstrap VMs, if any
+- name: Undefine old router VMs, if any
   virt:
     name: "{{ item }}"
     command: undefine
   with_items: "{{ all_vms.list_vms }}"
-  when: item is search("bootstrap-{{ cluster }}")
+  when: item is search("router-{{ cluster }}")
   become: yes
 
 - name: Find old bootstrap VM Storage
   find:
     paths: "{{ default_libvirt_pool_dir }}"
-    patterns: '*-bootstrap-{{ cluster }},*-bootstrap-{{ cluster }}.ign'
+    patterns: '*-router-{{ cluster }},*-router-{{ cluster }}.ign'
   register: find_results
   become: yes
 
-- name: Delete old bootstrap VMs Storage
+- name: Delete old router VMs Storage
   file:
     path: "{{ item['path'] }}"
     state: absent
