--- a/roles/installer/tasks/main.yml
+++ b/roles/installer/tasks/main.yml
@@ -2,9 +2,13 @@
 - name: Start installation process
   block:
     - include_tasks: roles/installer/tasks/10_clean_bootstrap_vm.yml
+    - include_tasks: roles/installer/tasks/15_clean_router_vm.yml
+      when: virtualized_install
     - include_tasks: roles/installer/tasks/20_clean_master_worker_vms.yml
       when: virtualized_install
     - include_tasks: roles/installer/tasks/30_create_bootstrap_vm.yml
+    - include_tasks: roles/installer/tasks/35_create_router_vm.yml
+      when: virtualized_install
     - include_tasks: roles/installer/tasks/40_create_master_worker_vms.yml
       when: virtualized_install
     - include_tasks: roles/installer/tasks/45_create_dns.yml
