Restart libvirt after modifying iptables

--- a/roles/installer/tasks/30_create_bootstrap_vm.yml
+++ b/roles/installer/tasks/30_create_bootstrap_vm.yml
@@ -51,6 +51,11 @@
     domain_network: "baremetal-{{ cluster }}"
     domain_mac: "52:54:00:45:7f:00"
 
+- name: Restart libvirt to apply rules
+  service:
+    name: libvirt
+    state: restarted
+
 - name: Start bootstrap vm
   virt:
     name: bootstrap-{{ cluster }}
