fix typo in restart service

--- a/roles/installer/tasks/30_create_bootstrap_vm.yml
+++ b/roles/installer/tasks/30_create_bootstrap_vm.yml
@@ -53,7 +53,7 @@
 
 - name: Restart libvirt to apply rules
   service:
-    name: libvirt
+    name: libvirtd
     state: restarted
 
 - name: Start bootstrap vm
