--- a/roles/installer/tasks/50_create_haproxy.yml
+++ b/roles/installer/tasks/50_create_haproxy.yml
@@ -1,8 +1,7 @@
 ---
 - name: Wait until router vm is available
   wait_for_connection:
-    delay: 60
-    timeout: 300
+  remote_user: root
   delegate_to: "{{ groups['router_vm'][0] }}"
 
 - name: Remove previous running haproxy
