--- a/roles/installer/tasks/15_clean_router_vm.yml
+++ b/roles/installer/tasks/15_clean_router_vm.yml
@@ -17,7 +17,7 @@
     name: "{{ item }}"
     command: destroy
   with_items: "{{ running_vms.list_vms }}"
-  when: item is search("router-{{ cluster }}")
+  when: item | search("router-{{ cluster }}")
   become: yes
 
 - name: Undefine old router VMs, if any
@@ -25,7 +25,7 @@
     name: "{{ item }}"
     command: undefine
   with_items: "{{ all_vms.list_vms }}"
-  when: item is search("router-{{ cluster }}")
+  when: item | search("router-{{ cluster }}")
   become: yes
 
 - name: Find old bootstrap VM Storage
