--- a/roles/installer/tasks/20_clean_master_worker_vms.yml
+++ b/roles/installer/tasks/20_clean_master_worker_vms.yml
@@ -17,7 +17,7 @@
     name: "{{ item }}"
     command: destroy
   with_items: "{{ running_vms.list_vms }}"
-  when: item | search("master-{{ cluster }}") or item | search("worker-{{ cluster }}")
+  when: item | regex_search("master-{{ cluster }}") or item | regex_search("worker-{{ cluster }}")
   become: yes
 
 - name: Undefine old master/worker VMs, if any
@@ -25,7 +25,7 @@
     name: "{{ item }}"
     command: undefine
   with_items: "{{ all_vms.list_vms }}"
-  when: item | search("master-{{ cluster }}") or item | search("worker-{{ cluster }}")
+  when: item | regex_search("master-{{ cluster }}") or item | regex_search("worker-{{ cluster }}")
   become: yes
 
 - name: Find old master VM Storage
