--- a/roles/installer/tasks/10_clean_bootstrap_vm.yml
+++ b/roles/installer/tasks/10_clean_bootstrap_vm.yml
@@ -1,14 +1,11 @@
 ---
 - name: Get list of all VMs
-  virt:
-    command: list_vms
+  command: "virsh list --all --name | grep bootstrap-{{ cluster }}"
   register: all_vms
   become: yes
 
 - name: Get list of all running VMs
-  virt:
-    command: list_vms
-    state: running
+  command: "virsh list --name | grep bootstrap-{{ cluster }}"
   register: running_vms
   become: yes
 
@@ -16,17 +13,14 @@
   virt:
     name: "{{ item }}"
     command: destroy
-  with_items: "{{ running_vms.list_vms }}"
-  when: item | regex_search("bootstrap-{{ cluster }}")
+  with_items: "{{ running_vms.results }}"
   become: yes
 
 - name: Undefine old bootstrap VMs, if any
   virt:
     name: "{{ item }}"
     command: undefine
-  with_items: "{{ all_vms.list_vms }}"
-  when: item | regex_search("bootstrap-{{ cluster }}")
-  become: yes
+  with_items: "{{ all_vms.results }}"
   become: yes
 
 - name: Find old bootstrap VM Storage
