--- a/roles/installer/tasks/20_clean_master_worker_vms.yml
+++ b/roles/installer/tasks/20_clean_master_worker_vms.yml
@@ -1,11 +1,11 @@
 ---
 - name: Get list of all VMs
-  command: "virsh list --all --name | grep -E 'master-{{ cluster }}|worker-{{ cluster }}'"
+  shell: "virsh list --all --name | grep -E 'master-{{ cluster }}|worker-{{ cluster }}'"
   register: all_vms
   become: yes
 
 - name: Get list of all running VMs
-  command: "virsh list --name | grep -E 'master-{{ cluster }}|worker-{{ cluster }}'"
+  shell: "virsh list --name | grep -E 'master-{{ cluster }}|worker-{{ cluster }}'"
   register: running_vms
   become: yes
 
