--- a/roles/installer/tasks/10_clean_bootstrap_vm.yml
+++ b/roles/installer/tasks/10_clean_bootstrap_vm.yml
@@ -1,11 +1,11 @@
 ---
 - name: Get list of all VMs
-  command: "virsh list --all --name | grep bootstrap-{{ cluster }}"
+  shell: "virsh list --all --name | grep bootstrap-{{ cluster }}"
   register: all_vms
   become: yes
 
 - name: Get list of all running VMs
-  command: "virsh list --name | grep bootstrap-{{ cluster }}"
+  shell: "virsh list --name | grep bootstrap-{{ cluster }}"
   register: running_vms
   become: yes
 
