Ignore errors if there are no vms

--- a/roles/installer/tasks/15_clean_router_vm.yml
+++ b/roles/installer/tasks/15_clean_router_vm.yml
@@ -1,12 +1,14 @@
 ---
 - name: Get list of all VMs
   shell: "virsh list --all --name | grep router-{{ cluster }}"
+  ignore_errors: true
   register: all_vms
   become: yes
 
 - name: Get list of all running VMs
   shell: "virsh list --name | grep router-{{ cluster }}"
   register: running_vms
+  ignore_errors: true
   become: yes
 
 - name: Destroy old router VMs, if any
