--- a/roles/installer/tasks/10_clean_bootstrap_vm.yml
+++ b/roles/installer/tasks/10_clean_bootstrap_vm.yml
@@ -3,11 +3,13 @@
   shell: "virsh list --all --name | grep bootstrap-{{ cluster }}"
   register: all_vms
   become: yes
+  ignore_errors: true
 
 - name: Get list of all running VMs
   shell: "virsh list --name | grep bootstrap-{{ cluster }}"
   register: running_vms
   become: yes
+  ignore_errors: true
 
 - name: Destroy old bootstrap VMs, if any
   virt:
