--- a/roles/installer/tasks/main.yml
+++ b/roles/installer/tasks/main.yml
@@ -9,8 +9,10 @@
     - include_tasks: roles/installer/tasks/30_create_bootstrap_vm.yml
     - include_tasks: roles/installer/tasks/35_create_router_vm.yml
       when: virtualized_install
-    - include_tasks: roles/installer/tasks/40_create_master_worker_vms.yml
+    - include_tasks: roles/installer/tasks/40_create_master_vms.yml
       when: virtualized_install
+    - include_tasks: roles/installer/tasks/41_create_worker_vms.yml
+      when: ( virtualized_install | bool ) and (num_workers | int > 0 )
     - include_tasks: roles/installer/tasks/45_create_dns.yml
       when: virtualized_install
     - include_tasks: roles/installer/tasks/50_create_haproxy.yml
