--- a/roles/installer/tasks/main.yml
+++ b/roles/installer/tasks/main.yml
@@ -6,6 +6,8 @@
       when: virtualized_install
     - include_tasks: roles/installer/tasks/20_clean_master_worker_vms.yml
       when: virtualized_install
+    - include_tasks: roles/installer/tasks/25_create_network.yml
+      when: virtualized_install
     - include_tasks: roles/installer/tasks/30_create_bootstrap_vm.yml
     - include_tasks: roles/installer/tasks/35_create_router_vm.yml
       when: virtualized_install
