Use nwfilter rule per cluster

--- a/roles/installer/tasks/25_create_network.yml
+++ b/roles/installer/tasks/25_create_network.yml
@@ -9,7 +9,7 @@
     tempdir: "{{ tempdiroutput.path }}"
 
 - name: Remove previous nwfilter if exists
-  shell: "virsh nwfilter-undefine allow-api"
+  shell: "virsh nwfilter-undefine allow-api-{{ cluster }}"
   ignore_errors: true
 
 - name: Write template to temporary file
