Parameterize cpu and memory to use

--- a/roles/installer/tasks/40_create_master_vms.yml
+++ b/roles/installer/tasks/40_create_master_vms.yml
@@ -17,8 +17,8 @@
   with_sequence: start=1 end={{ num_masters }}
   vars:
     domain_name: master-{{ cluster }}-{{ item }}
-    domain_memory: 16777216
-    domain_cpu: 4
+    domain_memory: {{ master_memory }}
+    domain_cpu: {{ master_cpu }}
     domain_iso: "{{ cluster_config_dir }}/generated_isos/master.iso"
     domain_disk: "{{ default_libvirt_pool_dir }}/master-{{ cluster }}-{{ item }}.qcow2"
     domain_network: "baremetal-{{ cluster }}"
