--- a/roles/installer/tasks/41_create_worker_vms.yml
+++ b/roles/installer/tasks/41_create_worker_vms.yml
@@ -11,8 +11,8 @@
   with_sequence: start=1 end={{ num_workers }}
   vars:
     domain_name: worker-{{ cluster }}-{{ item }}
-    domain_memory: 16777216
-    domain_cpu: 4
+    domain_memory: {{ worker_memory }}
+    domain_cpu: {{ worker_cpu }}
     domain_iso: "{{ cluster_config_dir }}/generated_isos/worker.iso"
     domain_disk: "{{ default_libvirt_pool_dir }}/worker-{{ cluster }}-{{ item }}.qcow2"
     domain_network: "baremetal-{{ cluster }}"
